--- a/src/main/resources/assets/simplebuilding/lang/de_de.json
+++ b/src/main/resources/assets/simplebuilding/lang/de_de.json
@@ -141,5 +141,18 @@
 
   "text.autoconfig.simplebuilding.option.enchantments.horseJump": "Pferdesprung Einstellungen",
   "text.autoconfig.simplebuilding.option.enchantments.horseJump.jumpStrengthMultiplier": "Sprungkraft Boost",
-  "text.autoconfig.simplebuilding.option.enchantments.horseJump.jumpStrengthMultiplier.@Tooltip": "Sprungkraftmultiplikator pro Verzauberungsstufe auf Pferderüstung (Standard: 0.20)."
+  "text.autoconfig.simplebuilding.option.enchantments.horseJump.jumpStrengthMultiplier.@Tooltip": "Sprungkraftmultiplikator pro Verzauberungsstufe auf Pferderüstung (Standard: 0.20).",
+
+  "block.simplebuilding.reinforced_chest": "Verstärkte Truhe",
+  "block.simplebuilding.netherite_chest": "Netherit-Truhe",
+
+  "block.simplebuilding.reinforced_hopper": "Verstärkter Trichter",
+  "block.simplebuilding.netherite_hopper": "Netherit-Trichter",
+
+  "block.simplebuilding.reinforced_piston": "Verstärkter Kolben",
+  "block.simplebuilding.netherite_piston": "Netherit-Kolben",
+  "tooltip.simplebuilding.netherite_piston": "Baut Blöcke basierend auf Redstone-Signalstärke ab (1-15).",
+
+  "block.simplebuilding.reinforced_blast_furnace": "Verstärkter Hochofen",
+  "block.simplebuilding.netherite_blast_furnace": "Netherit-Hochofen"
 }
